# tinkerers_hack

./: .env.example  .gitignore  AGENTS.md  README.md  demo.md  pyproject.toml  query_npcs.py  requirements.txt
data/: npcs.json
game_state_agent/: __init__.py  analyzer.py  capture.py  config.py  logging_config.py  main.py  models.py  redis_store.py  state_manager.py
redis_setup/: setup_redis.py
redis_setup/data/: npcs.json
voice_agent/: README.md  main.py
voice_agent/src/: __init__.py  audio.py  coach.py  overlay.py  ptt.py  screenshot.py  semantic_cache.py  stt.py  tts.py
